<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Wetter Wolke</string>
  <string name="app_name_weatherdetails">Wetter Details</string>
  <string name="app_name_temperature">Temperatur</string>
  <string name="city_paderborn" translatable="false">PB</string>
  <string name="city_paderborn20" translatable="false">PB2</string>
  <string name="city_freiburg" translatable="false">FR</string>
  <string name="city_bonn" translatable="false">BN</string>
  <string name="city_leo" translatable="false">Leo</string>
  <string name="city_paderborn_full" translatable="false">Paderborn</string>
  <string name="city_paderborn20_full" translatable="false">Paderborn 2.0</string>
  <string name="city_freiburg_full" translatable="false">Freiburg</string>
  <string name="city_bonn_full" translatable="false">Bonn</string>
  <string name="city_leo_full" translatable="false">Leopoldshöhe</string>
  <string name="temperature">Temperatur</string>
  <string name="humidity">Luftfeuchtigkeit</string>
  <string name="rain_last_hour">Regen 1h</string>
  <string name="rain_today">Regen heute</string>
  <string name="liter">l</string>
  <string name="freiburg_paderborn_bonn">Vergleich FR - PB - BN</string>
  <string name="data_mining">Auswertung in Google Tabellen</string>
  <string name="refresh">neu laden</string>
  <string name="update_intervall">Aktualisierungsintervall</string>
  <string name="update_summary">Frequenz mit der das Widget aktualisiert wird</string>
  <string name="action_preferences">Einstellungen</string>
  <string name="station_freiburg">Wetterstation in Freiburg</string>
  <string name="in_app">in der App anzeigen</string>
  <string name="in_widget">im Widget anzeigen</string>
  <string name="station_paderborn">Wetterstation in Paderborn</string>
  <string name="station_paderborn20">Wetterstation in Paderborn 2.0</string>
  <string name="station_bonn">Wetterstation in Bonn</string>
  <string name="action_reload">Neu laden</string>
  <string name="message_data_updated">Wetterdaten aktualisiert</string>
  <string name="message_data_update_failed">Fehler beim Abruf der Wetterdaten</string>
  <string name="data_overdue">Wetterdaten überfällig</string>
  <string name="since">seit</string>
  <string name="overdue">überfällig</string>
  <string name="minutes">Minuten</string>
  <string name="hours">Stunden</string>
  <string name="days">Tagen</string>
  <string name="action_7_days">7 Tage</string>
  <string name="action_solarradiation">Sonneneinstrahlung</string>
  <string name="action_summer_days">Sommertage</string>
  <string name="action_7_days_average">Durchschnitt</string>
  <string name="message_diagram_update_failed">Diagram Abruf fehlgeschlagen</string>
  <string name="action_diagrams">Diagramme</string>
  <string name="settings">Einstellungen</string>
  <string name="version" translatable="false">Version {v} Build {b}</string>
  <string name="version_info">Info zur App</string>
  <string name="rain_yesterday">Regen gestern:</string>
  <string name="rain_last_week">Regen letzte Woche:</string>
  <string name="rain_30_days">Regen letzte 30 Tage:</string>
  <string name="action_2_days">2 Tage</string>
  <string name="action_year">Jahresverlauf</string>
  <string name="action_last_year">Letztes Jahr</string>
  <string name="big_dot" translatable="false">●</string>
  <string name="intervall_changed">Update-Intervall:</string>
  <string name="update_deaktiviert">Widget wird nicht automatisch aktualisiert</string>
  <string name="action_winter_days">Wintertage</string>
  <string name="action_winter_days2024">Wintertage 2024/25</string>
  <string name="privileges">Berechtigung</string>
  <string name="secret">Code-Wort</string>
  <string name="inside_temperature">Raumtemperatur:</string>
  <string name="stations">Messstationen</string>
  <string name="theme">Farbschema</string>
  <string name="theme_summary">App wirklich beenden, damit das neue Schema wirksam wird</string>
  <string name="secret_summary">damit sieht man mehr</string>
  <string name="app_details">Details zu Wetter Wolke</string>
  <string name="app_author">von Christian Vögtle</string>
  <string name="send_message">Nachricht an Christian</string>
  <string name="sourcecode">Sourcecode</string>
  <string name="on_github" translatable="false">https://github.com/cvoegtle/WeatherWidget</string>
  <string name="send_mail">als E-Mail schicken</string>
  <string name="view_website" translatable="false">Christians Website</string>
  <string name="www_voegtle_org" translatable="false">https://www.voegtle.org/~christian</string>
  <string name="station_leo">Wetterstation in Leopoldshöhe</string>
  <string name="configure_stations">Messstationen einrichten</string>
  <string name="station_bali">Wetterstation in Bad Lippspringe</string>
  <string name="city_bali_full" translatable="false">Bad Lippspringe</string>
  <string name="city_bali" translatable="false">BaLi</string>
  <string name="action_bali_7days">7 Tage Verlauf</string>
  <string name="action_bali_paderborn">Vergleich mit Paderborn</string>
  <string name="rain">Regen</string>
  <string name="min_temperature">T min</string>
  <string name="max_temperature">T max</string>
  <string name="today">Heute</string>
  <string name="yesterday">Gestern</string>
  <string name="week">7 Tage</string>
  <string name="month">30 Tage</string>
  <string name="action_rain">Regen</string>
  <string name="action_wind">Wind</string>
  <string name="action_sun">Sonne</string>
  <string name="action_7_days_owl">OWL 7 Tage</string>
  <string name="action_solar">Solarleistung</string>
  <string name="solar_output">Solarleistung</string>
  <string name="kwh">Ertrag</string>
  <string name="city_mobil" translatable="false">MO</string>
  <string name="city_mobil_full">Freiburg Littenweiler</string>
  <string name="station_mobil">Mobile Wetterstation</string>
  <string name="city_herzo_full" translatable="false">Herzogenaurach</string>
  <string name="action_family_weather">Familienwetter</string>
  <string name="city_herzo" translatable="false">HZA</string>
  <string name="station_herzogenaurach">Wetterstation in Herzogenaurach</string>
  <string name="order_criteria">Sortierkriterium</string>
  <string name="order_summary">Bestimmt die Reihenfolge in der App</string>
  <string name="action_sort">sortieren</string>
  <string name="action_humidity">Luftfeuchtigkeit</string>
  <string name="city_magdeburg_full" translatable="false">Magdeburg</string>
  <string name="city_magdeburg" translatable="false">MD</string>
  <string name="station_magdeburg">Wetterstation in Magdeburg</string>
  <string name="action_compare_md_with_pb_fr">Magdeburg - Paderborn - Freiburg</string>
  <string name="action_30_days">30 Tage</string>
  <string name="wind_speed">Wind</string>
  <string name="action_solar_daily">Tagesproduktion Solaranlage</string>
  <string name="action_solar_monthly">Monatsproduktion Solaranlage</string>
  <string name="action_share">Teilen</string>
  <string name="message_permission_required">Die Schreibrechte sind notwendig, um das Diagramm an andere Anwendungen weiterzugeben.</string>
  <string name="city_shenzhen_full" translatable="false">Shenzhen</string>
  <string name="city_shenzhen" translatable="false">SZ</string>
  <string name="station_shenzhen">Wetterstation in Shenzhen</string>
  <string name="action_summer_days2025">Sommertage 2025</string>
  <string name="message_location_permission_required">Sortierung wird zurückgesetzt auf standard (fest)</string>
  <string name="action_show_location">Vermutete Position</string>
  <string name="channel_name">Wetter Wolke</string>
  <string name="channel_description">Aktuelle Wetterdaten im Blick</string>
  <string name="wetterwolke_in_background">Wetter Wolke wird regelmäßig aktualisiert</string>
  <string name="android8_caption">Hinweis</string>
  <string name="android8_explanation">Diese Benachrichtigung ist notwendig, damit das Wetter Widget aktualisiert werden kann.\n\nDiese Benachrichtigung kann ohne Funktionsverlust in den Apps &amp; Benachrichtigungen Einstellungen unterdrückt werden.\n\nAlternativ kann Wetter Wolke auch eine Benachrichtigung mit aktuellen Temperaturen anzeigen.</string>
  <string name="enable_notification">Aktuelle Messwerte anzeigen</string>
  <string name="understood">verstanden</string>
  <string name="highlight">hervorheben</string>
  <string name="barometer">Luftdruck</string>
  <string name="solarradiation">Sonneneinstrahlung</string>
  <string name="uvindex">UV Index</string>
  <string name="solar_caption">Max L/m²</string>
  <string name="solar_cummulated_caption">∑ Sonne</string>
  <string name="action_barometer">Luftdruck</string>
  <string name="power_production">Solar-Produktion</string>
  <string name="power_feed">Einspeisung</string>
  <string name="max_power_caption">Max L.</string>
  <string name="action_power">Stromproduktion</string>
  <string name="wind_gust">Böen</string>
  <string name="action_instant_freiburg">Littenweiler - Freiburg</string>
  <string name="action_bali_solar_daily">Tagesproduktion</string>
  <string name="action_bali_solar_monthly">Monatsproduktion</string>
  <string name="last_hour">letzte Stunde</string>
  <string name="diagram_button_description">Diagramem abrufen</string>
  <string name="forecast_button_description">Wettervorhersage</string>
  <string name="collapse_button_description">Statistik ausblenden</string>
  <string name="expand_button_description">Statistik einblenden</string>
  <string name="preferences_widget">Widget Einstellungen</string>
  <string name="widget_content">Angezeigte Werte</string>
  <string name="current_radiation">Schriftgröße für die detaillierte Anzeige</string>
  <string name="todays_radiation">Kummulierte Einstrahlung</string>

  <string name="widget_font_size_title">Schriftgröße</string>
  <string name="widget_font_size_summary">Schriftgröße im Wetter-Detail Widget</string>

  <string name="widget_max_values_title">Maximalanzahl Messwerte</string>
  <string name="widget_max_values_summary">Anzeige auf diese Anzahl Werte begrenzen</string>
  <string name="widget_content_summary">Festlegen welche und wieviele Messwerte angezeigt werden</string>
  <string name="app_theme">Farbschema</string>
  <string name="app_theme_summary">Farbschema der Wetterwolke festlegen</string>

</resources>
