<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/action_reload"
        android:icon="@drawable/ic_action_refresh_dark"
          android:title="@string/action_reload"
          app:showAsAction="ifRoom" />
  <item android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
          android:title="@string/action_share"
          app:showAsAction="ifRoom" />
  <item android:id="@+id/action_bali_7days"
          android:title="@string/action_bali_7days"
          app:showAsAction="never" />
  <item android:id="@+id/action_bali_wind"
          android:title="@string/action_wind"
          app:showAsAction="never" />
  <item android:id="@+id/action_bali_humidity"
          android:title="@string/action_humidity"
          app:showAsAction="never" />
  <item android:id="@+id/action_bali_solar_production"
          android:title="@string/action_power"
          app:showAsAction="never" />
  <item android:id="@+id/action_bali_solar_daily"
          android:title="@string/action_bali_solar_daily"
          app:showAsAction="never" />
  <item android:id="@+id/action_bali_solar_monthly"
          android:title="@string/action_bali_solar_monthly"
          app:showAsAction="never" />
  <item android:id="@+id/action_30_days"
          android:title="@string/action_30_days"
          app:showAsAction="never" />
  <item android:id="@+id/action_bali_paderborn"
          android:title="@string/action_bali_paderborn"
          app:showAsAction="never" />
  <item android:id="@+id/action_last_year"
          android:title="@string/action_last_year"
          app:showAsAction="never" />
</menu>
