<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/action_reload"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/action_reload"/>
  <item android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="ifRoom"
        android:title="@string/action_share"/>
  <item android:id="@+id/action_leo_rain"
        android:showAsAction="ifRoom"
        android:title="@string/action_rain"/>
  <item android:id="@+id/action_leo_wind"
        android:showAsAction="ifRoom"
        android:title="@string/action_wind"/>
  <item android:id="@+id/action_leo_barometer"
        android:showAsAction="ifRoom"
        android:title="@string/action_barometer"/>
  <item android:id="@+id/action_leo_solar"
        android:showAsAction="ifRoom"
        android:title="@string/action_power"/>
  <item android:id="@+id/action_solar_daily"
        android:showAsAction="ifRoom"
        android:title="@string/action_solar_daily"/>
  <item android:id="@+id/action_solar_monthly"
        android:showAsAction="ifRoom"
        android:title="@string/action_solar_monthly"/>
  <item android:id="@+id/action_leo_30days"
        android:showAsAction="ifRoom"
        android:title="@string/action_30_days"/>
  <item android:id="@+id/action_leo_last_year"
        android:showAsAction="ifRoom"
        android:title="@string/action_last_year"/>
</menu>
