<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/action_reload"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/action_reload"/>
  <item android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="ifRoom"
        android:title="@string/action_share"/>
  <item android:id="@+id/action_rain"
        android:showAsAction="ifRoom"
        android:title="@string/action_2_days"/>
  <item android:id="@+id/action_wind"
        android:showAsAction="ifRoom"
        android:title="@string/action_wind"/>
  <item android:id="@+id/action_sun"
        android:showAsAction="ifRoom"
        android:title="@string/action_sun"/>
  <item android:id="@+id/action_30_days"
        android:showAsAction="ifRoom"
        android:title="@string/action_30_days"/>
  <item android:id="@+id/action_last_year"
        android:showAsAction="ifRoom"
        android:title="@string/action_last_year"/>
  <item android:id="@+id/action_year"
        android:showAsAction="ifRoom"
        android:title="@string/action_year"/>
</menu>
