<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/action_reload"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom"
        android:title="@string/action_reload"/>
  <item android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom"
        android:title="@string/action_share"/>
  <item android:id="@+id/action_2_days"
        app:showAsAction="never"
        android:title="@string/action_2_days"/>
  <item android:id="@+id/action_solarradiation"
        app:showAsAction="never"
        android:title="@string/action_solarradiation"/>
  <item android:id="@+id/action_barometer"
        app:showAsAction="never"
        android:title="@string/action_barometer"/>
  <item android:id="@+id/action_30_days"
        app:showAsAction="never"
        android:title="@string/action_30_days"/>
  <item android:id="@+id/action_last_year"
        app:showAsAction="never"
        android:title="@string/action_last_year"/>
  <item android:id="@+id/action_year"
        app:showAsAction="never"
        android:title="@string/action_year"/>
</menu>
