<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/action_reload"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom"
        android:title="@string/action_reload"/>
  <item android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom"
        android:title="@string/action_share"/>
  <item android:id="@+id/action_magdeburg_rain"
        app:showAsAction="never"
        android:title="@string/action_rain"/>
  <item android:id="@+id/action_magdeburg_wind"
        app:showAsAction="never"
        android:title="@string/action_wind"/>
  <item android:id="@+id/action_magdeburg_humidity"
        app:showAsAction="never"
        android:title="@string/action_humidity"/>
  <item android:id="@+id/action_md_pb_fr"
        app:showAsAction="never"
        android:title="@string/action_compare_md_with_pb_fr"/>
  <item android:id="@+id/action_md_30days"
        app:showAsAction="never"
        android:title="@string/action_30_days"/>
  <item android:id="@+id/action_md_last_year"
        app:showAsAction="never"
        android:title="@string/action_last_year"/>

</menu>
