<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/stations"
                      android:key="category_stationen">
    <PreferenceScreen
            android:title="@string/configure_stations"
            android:key="screen_stationen">

      <PreferenceCategory android:title="@string/station_paderborn"
                          android:key="settings_paderborn">
        <CheckBoxPreference
                android:key="app_show_paderborn"
                android:title="@string/in_app"
                android:defaultValue="true"
                />
        <CheckBoxPreference
                android:key="widget_show_paderborn"
                android:title="@string/in_widget"
                android:defaultValue="true"
                />
        <CheckBoxPreference
                android:key="favorite_paderborn"
                android:title="@string/highlight"
                android:defaultValue="false"
                />
      </PreferenceCategory>

      <PreferenceCategory
              android:title="@string/station_bali"
              android:key="settings_bali">
        <CheckBoxPreference
                android:key="app_show_bali"
                android:title="@string/in_app"
                android:defaultValue="true"
                />
        <CheckBoxPreference
                android:key="widget_show_bali"
                android:title="@string/in_widget"
                android:defaultValue="false"
                />
        <CheckBoxPreference
                android:key="favorite_bali"
                android:title="@string/highlight"
                android:defaultValue="false"
                />
      </PreferenceCategory>

      <PreferenceCategory
              android:title="@string/station_leo"
              android:key="settings_leo">
        <CheckBoxPreference
                android:key="app_show_leo"
                android:title="@string/in_app"
                android:defaultValue="true"
                />
        <CheckBoxPreference
                android:key="widget_show_leo"
                android:title="@string/in_widget"
                android:defaultValue="false"
                />
        <CheckBoxPreference
                android:key="favorite_leo"
                android:title="@string/highlight"
                android:defaultValue="false"
                />
      </PreferenceCategory>

      <PreferenceCategory
              android:title="@string/station_bonn"
              android:key="settings_bonn">
        <CheckBoxPreference
                android:key="app_show_bonn"
                android:title="@string/in_app"
                android:defaultValue="true"
                />
        <CheckBoxPreference
                android:key="widget_show_bonn"
                android:title="@string/in_widget"
                android:defaultValue="true"
                />
        <CheckBoxPreference
                android:key="favorite_bonn"
                android:title="@string/highlight"
                android:defaultValue="false"
                />
      </PreferenceCategory>

      <PreferenceCategory
              android:title="@string/station_magdeburg"
              android:key="settings_magdeburg">
        <CheckBoxPreference
                android:key="app_show_magdeburg"
                android:title="@string/in_app"
                android:defaultValue="true"
                />
        <CheckBoxPreference
                android:key="widget_show_magdeburg"
                android:title="@string/in_widget"
                android:defaultValue="false"
                />
        <CheckBoxPreference
                android:key="favorite_magdeburg"
                android:title="@string/highlight"
                android:defaultValue="false"
                />
      </PreferenceCategory>
      <PreferenceCategory
              android:title="@string/station_herzogenaurach"
              android:key="settings_herzo">
        <CheckBoxPreference
                android:key="app_show_herzo"
                android:title="@string/in_app"
                android:defaultValue="true"
                />
        <CheckBoxPreference
                android:key="widget_show_herzo"
                android:title="@string/in_widget"
                android:defaultValue="false"
                />
        <CheckBoxPreference
                android:key="favorite_herzo"
                android:title="@string/highlight"
                android:defaultValue="false"
                />
      </PreferenceCategory>

      <PreferenceCategory
              android:title="@string/station_freiburg"
              android:key="settings_freiburg">
        <CheckBoxPreference
                android:key="app_show_freiburg"
                android:title="@string/in_app"
                android:defaultValue="true"
                />
        <CheckBoxPreference
                android:key="widget_show_freiburg"
                android:title="@string/in_widget"
                android:defaultValue="true"
                />
        <CheckBoxPreference
                android:key="favorite_freiburg"
                android:title="@string/highlight"
                android:defaultValue="false"
                />
      </PreferenceCategory>

      <PreferenceCategory
              android:title="@string/station_shenzhen"
              android:key="settings_shenzhen">
        <CheckBoxPreference
                android:key="app_show_shenzhen"
                android:title="@string/in_app"
                android:defaultValue="true"
        />
        <CheckBoxPreference
                android:key="widget_show_shenzhen"
                android:title="@string/in_widget"
                android:defaultValue="false"
        />
        <CheckBoxPreference
                android:key="favorite_shenzhen"
                android:title="@string/highlight"
                android:defaultValue="false"
        />
      </PreferenceCategory>

      <PreferenceCategory
              android:title="@string/station_mobil"
              android:key="settings_mobil">
        <CheckBoxPreference
                android:key="app_show_mobil"
                android:title="@string/in_app"
                android:defaultValue="false"
                />
        <CheckBoxPreference
                android:key="widget_show_mobil"
                android:title="@string/in_widget"
                android:defaultValue="false"
                />
        <CheckBoxPreference
                android:key="favorite_mobil"
                android:title="@string/highlight"
                android:defaultValue="false"
                />
      </PreferenceCategory>

    </PreferenceScreen>
  </PreferenceCategory>

  <PreferenceCategory
          android:title="@string/preferences_widget"
          android:key="settings_privileges">
    <ListPreference
            android:key="widget_font_size"
            android:title="@string/widget_font_size_title"
            android:summary="@string/widget_font_size_summary"
            android:defaultValue="M"
            android:entries="@array/widget_font_size_entries"
            android:entryValues="@array/widget_font_size_values"/>

    <PreferenceScreen
            android:title="@string/widget_content"
            android:key="widget_content">
      <CheckBoxPreference
              android:key="widget_temperature"
              android:title="@string/temperature"
              android:defaultValue="true" />
      <CheckBoxPreference
              android:key="widget_rain"
              android:title="@string/rain"
              android:defaultValue="false" />
      <CheckBoxPreference
              android:key="widget_rain_last_hour"
              android:title="@string/rain_last_hour"
              android:defaultValue="false" />
      <CheckBoxPreference
              android:key="widget_current_radiation"
              android:title="@string/current_radiation"
              android:defaultValue="false" />
      <CheckBoxPreference
              android:key="widget_total_radiation"
              android:title="@string/todays_radiation"
              android:defaultValue="false" />
      <CheckBoxPreference
              android:key="widget_humidity"
              android:title="@string/humidity"
              android:defaultValue="false" />
    </PreferenceScreen>

  </PreferenceCategory>
  <PreferenceCategory
          android:title="@string/privileges"
          android:key="settings_privileges">
    <EditTextPreference
            android:key="secret"
            android:title="@string/secret"
            android:summary="@string/secret_summary"/>
  </PreferenceCategory>

  <PreferenceCategory
          android:title="@string/version_info"
          android:key="settings_version">
    <PreferenceScreen android:key="version"
                      android:title="@string/app_details"
                      android:summary="@string/version">
      <Preference android:title="@string/version"
                  android:summary="@string/app_author"/>
      <Preference android:title="@string/send_message"
                  android:summary="@string/send_mail">
        <intent android:action="android.intent.action.SENDTO"
                android:data="mailto:christian@voegtle.org"/>
      </Preference>
      <Preference android:title="@string/view_website"
                  android:summary="@string/www_voegtle_org">
        <intent android:action="android.intent.action.VIEW"
                android:data="http://www.voegtle.org/~christian"/>
      </Preference>
      <Preference android:title="@string/sourcecode"
                  android:summary="@string/on_github">
        <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/cvoegtle/WeatherWidget"/>
      </Preference>

    </PreferenceScreen>
  </PreferenceCategory>

</PreferenceScreen>
