<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/action_reload"
        android:icon="@drawable/ic_refresh"
          android:title="@string/action_reload"
          app:showAsAction="ifRoom" />
  <item android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
          android:title="@string/action_share"
          app:showAsAction="ifRoom" />
  <item android:id="@+id/action_7_days"
          android:title="@string/action_7_days"
          app:showAsAction="never" />
  <item android:id="@+id/action_7_days_owl"
          android:title="@string/action_7_days_owl"
          app:showAsAction="never" />
  <item android:id="@+id/action_family_weather"
          android:title="@string/action_family_weather"
          app:showAsAction="never" />
  <item android:id="@+id/action_7_days_average"
          android:title="@string/action_7_days_average"
          app:showAsAction="never" />
  <item android:id="@+id/action_rain"
          android:title="@string/action_rain"
          app:showAsAction="never" />
  <item android:id="@+id/action_summerdays"
          android:title="@string/action_summer_days"
          app:showAsAction="never" />
  <item android:id="@+id/action_summerdays2024"
          android:title="@string/action_summer_days2024"
          app:showAsAction="never" />
  <item android:id="@+id/action_winterdays"
          android:title="@string/action_winter_days"
          app:showAsAction="never" />
  <item android:id="@+id/action_winterdays2023"
          android:title="@string/action_winter_days2023"
          app:showAsAction="never" />
</menu>
