<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
  <item android:id="@+id/action_reload"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom"
        android:title="@string/action_reload"/>
  <item android:id="@+id/action_diagrams"
        android:icon="@drawable/ic_insert_chart"
        app:showAsAction="ifRoom"
        android:title="@string/action_diagrams"/>
  <item android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom"
        android:title="@string/action_sort"/>
  <item android:id="@+id/action_preferences"
        app:showAsAction="never"
        android:title="@string/action_preferences"/>
</menu>
